# sia_adaptor_sig_study

./: Adaptor_Sig_Protocol.md  Cargo.toml  README.md
adaptor_sig_protocol/: AliceStartsWithBTC.md  AliceStartsWithSIA.md
hltc_emulator_protocol/: option1_signatures_schemes.md  option2_spend_policies.md
src/: main.rs
